syntax = "proto3";

import "../global/global.proto";

package auth;

/* 
  회원가입 및 로그인 패킷
*/
message C2SRegisterRequest {
    string id = 1;
    string password = 2;
    string email = 3;
}

message S2CRegisterResponse {
    bool success = 1;
    string message = 2;
    GlobalFailCode failCode = 3;
}

message C2SLoginRequest {
    string id = 1;
    string password = 2;
}

message S2CLoginResponse {
    bool success = 1;
    string message = 2;
    string token = 3;
    GlobalFailCode failCode = 4;
}
